Learning to jump

--- a/image_captures.ipynb
+++ b/image_captures.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -22,6 +22,7 @@
     "from tqdm import tqdm, tnrange\n",
     "import numpy as np\n",
     "from collections import defaultdict,Counter\n",
+    "from scipy.misc import imread, imsave\n",
     "\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.keys import Keys\n",
@@ -29,53 +30,13 @@
     "\n",
     "import pandas as pd\n",
     "import base64\n",
+    "import io\n",
+    "from PIL import Image\n",
     "\n",
     "from matplotlib import pyplot as plt, rcParams\n",
+    "from matplotlib import cm\n",
     "%matplotlib inline\n",
     "rcParams[\"figure.figsize\"] = (16,12)    # Use this line to increase your figure size (optional)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Stack overflow link talking about saving images in canvas: https://stackoverflow.com/questions/44485616/web-scraping-image-inside-canvas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Option 1\n",
-    "Selenium is capable of taking a screenshot and saving it, here's a working example of it:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "url = \"https://chromedino.com/\"\n",
-    "browser = webdriver.Chrome()\n",
-    "try:\n",
-    "    browser.get(url)\n",
-    "    browser.save_screenshot('homepage.png')\n",
-    "except Exception as e:\n",
-    "    print(\"Errored out at step 1\", e)\n",
-    "finally:\n",
-    "    browser.close() #make sure we close it when we are finished."
    ]
   },
   {
@@ -88,12 +49,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [],
    "source": [
+    "def detect_object(img):\n",
+    "    x,y = np.shape(img)\n",
+    "    dino = img[x//2:,:x//2] #prob don't need this\n",
+    "    close = img[x//2:,x//2+20:x+20]\n",
+    "    return np.mean(close)\n",
+    "    print(\"Calculated {}\",np.mean(close))\n",
+    "\n",
     "js_call = \"return document.getElementsByClassName('runner-canvas')[0].toDataURL('image/png').substring(21);\"\n",
     "url = \"https://chromedino.com/\"\n",
     "browser = webdriver.Chrome()\n",
@@ -102,27 +71,28 @@
     "\n",
     "    body = browser.find_element_by_id('t')\n",
     "    body.send_keys(Keys.ARROW_UP)\n",
-    "    time.sleep(5)\n",
-    "    \n",
-    "    b64_image = browser.execute_script(js_call)\n",
-    "    image = base64.b64decode(b64_image)\n",
-    "    output = open(\"game_board2.png\", 'wb')\n",
-    "    output.write(image)\n",
-    "    output.close()\n",
+    "    prev_jump = None\n",
+    "    while True:\n",
+    "        time.sleep(.25)\n",
+    "        b64_image = browser.execute_script(js_call)\n",
+    "        image = base64.b64decode(b64_image)\n",
+    "        buf = io.BytesIO(image)\n",
+    "        img = Image.open(buf).convert('LA')\n",
+    "        np_img = np.array(img)[:,:,0]\n",
+    "        new_jump = detect_object(np_img)\n",
+    "        if prev_jump == new_jump and new_jump > 3:\n",
+    "            print(\"I think I died\")\n",
+    "            break\n",
+    "        elif new_jump > 3:\n",
+    "            body.send_keys(Keys.ARROW_UP)\n",
+    "        else:\n",
+    "            print(\"chose to not jump\")\n",
+    "        print(new_jump)\n",
     "except Exception as e:\n",
     "    print(\"Errored out at step 1\", e)\n",
     "finally:\n",
     "    browser.close() #make sure we close it when we are finished."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
